--- a/source/sections/mega.scss
+++ b/source/sections/mega.scss
@@ -153,9 +153,10 @@
         }
 
         a {
-          padding: 0.5rem 0;
+          padding: 0rem 0;
           display: inline-block;
           color: var(--green);
+          font-size:1.4rem;
         }
       }
 
