--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -119,15 +119,11 @@
         </div>
 
         <div class="mega__wrap__column mega__wrap__column--blocked animated [ js-in-view ]">
-          <a href="/collections/all" class="mega__wrap__column__block [ js-cursor-sale ]">
-            <p class="[ js-animate ] [ js-animate-1 ]">Launch Sale</p>
-            <p class="[ js-animate ] [ js-animate-2 ]">Launch Sale</p>
-            <p class="[ js-animate ] [ js-animate-3 ]">Launch Sale</p>
-            <p><span class="button button--outline">SHOP NOW</span></p>
-            <p class="animate-3">
-              10% OFF<br>
-              AT CHECKOUT
+          <a href="/collections/kits-&-gifts" class="mega__wrap__column__block [ js-cursor-sale ]">
+            <p>
+              <span class="button"><b>Kits & Gifts</b></span>
             </p>
+          
           </a>
         </div>
       </div>
