--- a/assets/style.css
+++ b/assets/style.css
@@ -6557,6 +6557,31 @@ iframe.wait-autoplay {
   padding: 1rem 4rem;
 }
 
+.mega__wrap__column--blocked img {
+  object-fit: cover;
+  width: calc(100% - 8rem);
+  height: calc(100% - 2rem);
+  position: absolute;
+  top: 1rem;
+  left: 4rem;
+}
+
+.mega__wrap__column--blocked:after {
+  content: "";
+  opacity: .3;
+  background-image: linear-gradient(#0000 0%, #000 100%);
+  width: calc(100% - 8rem);
+  height: calc(100% - 2rem);
+  display: block;
+  position: absolute;
+  top: 1rem;
+  left: 4rem;
+}
+
+.mega__wrap__column--blocked p {
+  position: relative;
+}
+
 .mega__wrap__column__link {
   width: 100%;
   margin-bottom: 1rem;
@@ -6601,24 +6626,8 @@ iframe.wait-autoplay {
 }
 
 .mega__wrap__column__block p {
-  text-transform: uppercase;
-  color: #0000;
-  text-align: center;
-  -webkit-text-fill-color: rgba(var(--green), 0);
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: var(--green);
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 2.6rem;
-  font-weight: bold;
-}
-
-.mega__wrap__column__block p.filled {
-  color: var(--green);
-  -webkit-text-fill-color: var(--green);
-  -webkit-text-stroke-width: 0px;
-  -webkit-text-stroke-color: var(--green);
+  z-index: 3;
+  position: relative;
 }
 
 .mega__wrap__column__block p .button {
