--- a/source/sections/mega.scss
+++ b/source/sections/mega.scss
@@ -57,8 +57,7 @@
 
   border-radius: 0 0 5rem 5rem;
   box-shadow: 0 10px 30px rgba(#000, 0.05);
-  box-shadow:$z9;
-
+  box-shadow: $z9;
 
   &__shadow {
     width: 100%;
@@ -125,6 +124,30 @@
 
       &--blocked {
         padding: 1rem 4rem;
+
+        img {
+          position: absolute;
+          width: calc(100% - 8rem);
+          height: calc(100% - 2rem);
+          top: 1rem;
+          left: 4rem;
+          object-fit: cover;
+        }
+
+        &:after {
+          @include pseudo;
+          background-image: linear-gradient(180deg, rgba(black, 0) 0%, black 100%);
+          position: absolute;
+          width: calc(100% - 8rem);
+          height: calc(100% - 2rem);
+          top: 1rem;
+          left: 4rem;
+          opacity: 0.3;
+        }
+
+        p {
+          position: relative;
+        }
       }
 
       &__link {
@@ -156,7 +179,7 @@
           padding: 0rem 0;
           display: inline-block;
           color: var(--green);
-          font-size:1.4rem;
+          font-size: 1.4rem;
         }
       }
 
@@ -171,26 +194,8 @@
         align-items: center;
 
         p {
-          text-transform: uppercase;
-          font-weight: bold;
-          color: white;
-          text-align: center;
-          width: 100%;
-          font-size: 2.6rem;
-          color: transparent;
-          -webkit-text-fill-color: rgba(var(--green), 0);
-          -webkit-text-stroke-width: 1px;
-          -webkit-text-stroke-color: var(--green);
-          padding: 0;
-          margin: 0;
-
-          &.filled {
-            color: var(--green);
-            -webkit-text-fill-color: var(--green);
-            -webkit-text-stroke-width: 0px;
-            -webkit-text-stroke-color: var(--green);
-          }
-
+          position: relative;
+          z-index: 3;
           .button {
             min-width: 100%;
             margin-top: 2rem;
