--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -104,6 +104,32 @@
 
   <body>
     {{ content_for_header }}
+    {%- form 'storefront_password', class: 'password-form' -%}
+      <div class="password-field field{% if form.errors %} password-field--error{% endif %}">
+        <input
+          type="password"
+          name="password"
+          id="Password" 
+          class="field__input"
+          autocomplete="current-password"
+          {% if form.errors %}
+            aria-invalid="true"
+            aria-describedby="PasswordLoginForm-password-error"
+          {%- endif -%}
+          placeholder="passowrd"
+        >
+        {%- if form.errors -%}
+          <div id="PasswordLoginForm-password-error" role="status">
+            <span class="form__message">
+              Error
+            </span>
+          </div>
+        {%- endif -%}
+      </div>
+      <button name="commit" class="password-button button button--outline">
+        Submit
+      </button>
+    {%- endform -%}
 
     {{ content_for_layout }}
   </body>
