style: Update responsive styles for landing page on smaller screens

--- a/source/sections/password.scss
+++ b/source/sections/password.scss
@@ -95,6 +95,11 @@
         @include media($lg, max) {
             width: 100%;
         }
+
+        @include media($md, max) {
+            padding: 4rem 2rem;
+        }
+
     }
 
     &-constraint {
