--- a/assets/style.css
+++ b/assets/style.css
@@ -6738,6 +6738,12 @@ iframe.wait-autoplay {
   }
 }
 
+@media only screen and (max-width: 767px) {
+  .landing-right {
+    padding: 4rem 2rem;
+  }
+}
+
 .landing-constraint {
   width: 100%;
   max-width: 50rem;
