--- a/source/sections/password.scss
+++ b/source/sections/password.scss
@@ -17,9 +17,17 @@
     position: relative;
 
     &-logo {
+
+
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+
+
         @include media($md, max) {
             text-align: center;
             display: block;
+
 
             svg {
                 display: inline-block;
@@ -39,10 +47,16 @@
 
         @include media($lg, max) {
             width: 100%;
+            min-height: 60vh;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center
         }
 
         @include media($md, max) {
             padding: 4rem 2rem;
+            ;
         }
 
         h1 {
@@ -125,7 +139,7 @@
         position: absolute;
         bottom: -10%;
         right: -20%;
-        transform: translateY(18%) translateX(-0%) rotate(-40deg);
+        transform: translateY(18%) translateX(6%) rotate(-40deg);
         pointer-events: none;
         z-index: 1;
 
@@ -135,7 +149,45 @@
     }
 
     &-wave2 {
-        transform: translateY(-5%) translateX(-0%) rotate(-220deg);
+        transform: translateY(-5%) translateX(6%) rotate(-220deg);
     }
 
+}
+
+[data-splitting] {
+    opacity: 0;
+
+    .word {
+        position: relative;
+        overflow: hidden;
+        display: inline-block;
+        line-height: 1;
+
+        .char {
+            position: relative;
+            display: inline-block;
+            font-size: inherit;
+            transform: translateY(100%);
+            margin: 0;
+            transition: all 555ms ease-in-out;
+        }
+
+        .char {
+            padding-bottom: 20px;
+        }
+    }
+
+    .char {
+        transition-delay: calc(30ms + (40ms * var(--char-index))) !important;
+    }
+}
+
+.inview [data-splitting] {
+    opacity: 1;
+
+    .word {
+        .char {
+            transform: translateY(0);
+        }
+    }
 }
