--- a/source/sections/password.scss
+++ b/source/sections/password.scss
@@ -17,11 +17,9 @@
     position: relative;
 
     &-logo {
-
-
         position: absolute;
         top: 2rem;
-        left: 2rem;
+        left: 3rem;
 
 
         @include media($md, max) {
@@ -45,18 +43,20 @@
         overflow: hidden;
         width: 60%;
 
+
         @include media($lg, max) {
             width: 100%;
             min-height: 60vh;
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
-            align-items: center
+            // justify-content: center;
+            align-items: center;
+            align-items: flex-end;
+            text-align: left;
         }
 
         @include media($md, max) {
             padding: 4rem 2rem;
-            ;
         }
 
         h1 {
@@ -72,6 +72,10 @@
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: white;
             letter-spacing: -2px;
+
+            @include media($lg, max) {
+                text-align: left;
+            }
 
             @include media(1600px) {
                 line-height: 1.1;
@@ -90,10 +94,15 @@
             }
 
             @include media($md, max) {
+                [data-splitting] .word {
+                    line-height: 0.8;
+                }
+
                 font-size: 5rem;
                 white-space: normal;
-                line-height: 1.3;
-                text-align: center;
+                line-height: 0.8;
+                text-align: left;
+                margin-bottom: -3.3rem;
             }
         }
     }
@@ -145,6 +154,10 @@
 
         path {
             stroke: white;
+        }
+
+        @include media($md, max) {
+            width: 100vw;
         }
     }
 
