updated the colour scheme for the site

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -71,13 +71,13 @@
         --white: #ffffff;
         --off-white: #F3F2F1;
         --black: #000000;
-        --yellow-light: #FFEFB1;
-        --pink-light: #F7D8DF;
+        --yellow-light: #ffebb0;
+        --pink-light: #fcdfe1;
         --purple-light: #DFDFEE;
         --blue-light: #E1EDF9;
-        --blue: #557FC0;
+        --blue: #4289b4;
         --green-light: #A6D3D8;
-        --green: #54BAAB;
+        --green: #367b7f;
 
         /* Font Sizes */
         --h1-size: {{ settings.h1_size }}px;
