--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -79,16 +79,16 @@
         --off-white: #F3F2F1;
         --grey-light: #BABABA;
         --black: #000000;
-        --yellow-light: #FFEFB1;
-        --orange: #F05A30;
-        --pink-light: #F7D8DF;
-        --pink: #EC208F;
+        --yellow-light: #ffebb0;
+        --orange: #ec5b44;
+        --pink-light: #fcdfe1;
+        --pink: #703f6c;
         --purple-light: #DFDFEE;
         --blue-light: #E1EDF9;
         --blue-mid: #A5D1D9;
-        --blue: #557FC0;
+        --blue: #4289b4;
         --green-light: #A6D3D8;
-        --green: #54BAAB;
+        --green: #367b7f;
 
         /* Font Sizes */
         /* Font Sizes */
