--- a/source/sections/password.scss
+++ b/source/sections/password.scss
@@ -13,14 +13,18 @@
     min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    background: var(--green);
+    background: var(--blue-light);
     position: relative;
+    overflow: hidden;
 
     &-logo {
         position: absolute;
         top: 2rem;
         left: 3rem;
 
+        path {
+            fill: var(--green);
+        }
 
         @include media($md, max) {
             text-align: center;
@@ -36,94 +40,67 @@
         }
     }
 
-    &-left {
-        width: calc(100% - 40rem);
-        padding: 4rem;
-        position: relative;
-        overflow: hidden;
-        width: 60%;
 
+
+    &-header {
+        position: absolute;
+        top: 4rem;
+        right: 4rem;
+
+        @include media($md, max) {
+            top: 12rem;
+           left: 2rem;
+           right: auto;
+        }
+    }
+
+    h1 {
+        text-align: right;
+        line-height: 3vw;
+        font-weight: 700;
+        white-space: nowrap;
+        font-size: 7vw;
+        color: transparent;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: var(--green);
+        letter-spacing: -2px;
+        z-index: 21;
 
         @include media($lg, max) {
-            width: 100%;
-            min-height: 60vh;
-            display: flex;
-            flex-wrap: wrap;
-            // justify-content: center;
-            align-items: center;
-            align-items: flex-end;
             text-align: left;
         }
 
-        @include media($md, max) {
-            padding: 4rem 2rem;
+        @include media(1600px) {
+            line-height: 1.1;
+            font-size: 11rem;
         }
-
-        h1 {
-            position: absolute;
-            bottom: 4rem;
-            left: 4rem;
-            line-height: 8vw;
-            font-weight: 700;
-            white-space: nowrap;
-            font-size: 7vw;
-            color: transparent;
-            -webkit-text-fill-color: transparent;
-            -webkit-text-stroke-width: 1px;
-            -webkit-text-stroke-color: white;
-            letter-spacing: -2px;
-
-            @include media($lg, max) {
-                text-align: left;
-            }
-
-            @include media(1600px) {
-                line-height: 1.1;
-                font-size: 11rem;
-            }
-
-            @include media($lg, max) {
-                position: relative;
-                bottom: 0;
-                left: 0;
-
-                br {
-                    display: none;
-                }
-
-            }
-
-            @include media($md, max) {
-                [data-splitting] .word {
-                    line-height: 0.8;
-                }
-
-                font-size: 5rem;
-                white-space: normal;
-                line-height: 0.8;
-                text-align: left;
-                margin-bottom: -3.3rem;
-            }
-        }
-    }
-
-    &-right {
-        width: 40rem;
-        background: var(--blue-light);
-        padding: 4rem;
-        display: flex;
-        flex-wrap: wrap;
-        width: 40%;
 
         @include media($lg, max) {
-            width: 100%;
+            position: relative;
+            bottom: 0;
+            left: 0;
+
+            br {
+                display: none;
+            }
+
         }
 
         @include media($md, max) {
-            padding: 4rem 2rem;
-        }
+            [data-splitting] .word {
+                line-height: 0.8;
+            }
 
+            font-size: 5rem;
+            white-space: normal;
+            line-height: 0.8;
+            text-align: left;
+            margin-bottom: -3.7rem;
+        }
     }
+
+
 
     &-constraint {
         width: 100%;
@@ -138,6 +115,11 @@
     &-copy {
         margin-top: auto;
         margin-bottom: 0;
+        padding: 4rem;
+
+        @include media($md, max) {
+            padding: 2rem;
+        }
     }
 
     &-wave2,
@@ -153,7 +135,7 @@
         z-index: 1;
 
         path {
-            stroke: white;
+            stroke: var(--green);
         }
 
         @include media($md, max) {
