--- a/sections/grid-block-with-text.liquid
+++ b/sections/grid-block-with-text.liquid
@@ -37,9 +37,9 @@
           <div class="grid-with-text__item__image">
             {%- if block.settings.image != blank -%}
               {% if count == 1 %}
-                {{ block.settings.image | image_url: width: 690, height: 690 | image_tag }}
+                {{ block.settings.image | image_url: width: 690 | image_url: height: 690 | image_tag }}
               {% else %}
-                {{ block.settings.image | image_url: width: 690, height: 340 | image_tag }}
+                {{ block.settings.image | image_url: width: 690 | image_url: height: 340 | image_tag }}
               {% endif %}
             {%- endif -%}
           </div>
