--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -18,7 +18,7 @@
 
         <div class="banner-blog-image">
           <img
-            src="{{ article.image | image_url: width: 640, height: 480 }}"
+            src="{{ article.image | image_url: width: 640 | image_url: height: 480 }}"
             alt="grid item image"
             loading="lazy"
             width="640"
@@ -96,7 +96,7 @@
       <a href="{{ article.url }}" class="articles-grid__item" data-tags="{{ article.tags }}">
         <div class="articles-grid__item__image">
           <img
-            src="{{ article.image | image_url: width: 640, height: 480 }}"
+            src="{{ article.image | image_url: width: 640 | image_url: height: 480 }}"
             alt="grid item image"
             loading="lazy"
             width="640"
