--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -23,7 +23,7 @@
         <a href="{{ product.url }}" class="collection-grid__list__item collection-grid__list__item--product">
           <div class="collection-grid__list__item__image">
             {% if product.featured_media %}
-              {{ product.featured_media | image_url: width: 400, height: 400 | image_tag }}
+              {{ product.featured_media | image_url: width: 400 | image_url: height: 400 | image_tag }}
             {% else %}
               <img
                 src="{{ 'placeholder.jpeg' | asset_url }}"
