--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,7 +54,7 @@
     {% endcomment %}
 
     {%- if settings.favicon != blank -%}
-      <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
+      <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32 | image_url: height: 32 }}">
     {%- endif -%}
 
     {% comment %}
