--- a/sections/hero-block.liquid
+++ b/sections/hero-block.liquid
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="hero__background">
     {%- if section.settings.image != blank -%}
-      {{ section.settings.image | image_url: width: 1500, height: 800 | image_tag }}
+      {{ section.settings.image | image_url: width: 1500 | image_url: height: 800 | image_tag }}
     {%- endif -%}
   </div>
 
