--- a/sections/image-text-block.liquid
+++ b/sections/image-text-block.liquid
@@ -1,7 +1,7 @@
 <div class="element image-element {% if block.settings.reverse_layout %}image-element--reversed{%- endif -%}">
   <div class="image-element__wrap image-element__wrap--{$Width}">
     <div class="image-element__wrap__image">
-      {{ section.settings.image | image_url: width: 1200, height: 800 | image_tag }}
+      {{ section.settings.image | image_url: width: 1200 | image_url: height: 800 | image_tag }}
 
     </div>
 
