--- a/source/sections/text.scss
+++ b/source/sections/text.scss
@@ -14,3 +14,44 @@
     }
   }
 }
+
+img.error,
+.text-block > img,
+.text-block .ss-htmleditorfield-file,
+.text-block__wrap > p > em > a > img,
+.text-block__wrap > p > a > img,
+.text-block__wrap > p > img {
+  text-align: center;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  position: relative;
+  min-height: 50px;
+}
+
+img.error {
+  &:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0;
+    height: calc(100%);
+    width: 100%;
+    background-color: $off-white;
+  }
+
+  &:after {
+    padding: 0 2rem;
+    content: "🔗" " Missing Image " attr(alt);
+    display: block;
+    font-size: 12px;
+    color: $primary;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    width: 100%;
+    text-align: center;
+  
+  }
+}
